Revert "fixed footer overlapping"
This reverts commit 07ffdc6d9e94dc8af5c4f7acaabda50b845ab945.

commenting min-height for body made weird things to the bacground

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -86,9 +86,9 @@ html, body {
 html {
   height: 100%;
 }
-// body {
-//   min-height: 100%;
-// }
+body {
+  min-height: 100%;
+}
 body.default-background {
   display: flex;
   flex-direction: column;
